Removed negative margin on #wrapper to fix overlap bug in Safari

--- a/app/assets/stylesheets/web/app.scss
+++ b/app/assets/stylesheets/web/app.scss
@@ -119,7 +119,7 @@ body#tinymce {
 	min-height: 100%;
   height: auto !important;
   height: 100%;
-  margin: 0 auto -200px;
+  margin: 0 auto;
   position: relative;
   width: 960px; }
 
